--- a/TheWeb/TheWeb.csproj
+++ b/TheWeb/TheWeb.csproj
@@ -412,21 +412,25 @@
     <Content Include="node_modules\font-awesome\scss\_variables.scss" />
     <None Include="packages.config" />
     <TypeScriptCompile Include="node_modules\popper.js\index.d.ts" />
+    <TypeScriptCompile Include="src\app\account\acAddress.component.ts" />
+    <TypeScriptCompile Include="src\app\account\acBasic.component.ts" />
     <TypeScriptCompile Include="src\app\cart\cart.component.ts" />
     <TypeScriptCompile Include="src\app\classes\image.ts" />
+    <Content Include="src\app\account\acAddress.component.html" />
+    <Content Include="src\app\account\acBasic.component.html" />
     <Content Include="src\app\account\account.component.css" />
     <Content Include="src\app\app.component.html" />
+    <Content Include="src\assets\zig-zag-blk.png" />
     <Content Include="src\app\cart\cart.component.css" />
     <Content Include="src\app\cart\cart.component.html" />
-    <Content Include="src\app\css\grid-responsive.css" />
     <Content Include="src\app\css\header.css" />
     <Content Include="src\app\footer.component.html" />
     <Content Include="src\app\header.component.html" />
     <Content Include="src\app\home\productdetails.component.css" />
     <Content Include="src\app\home\productdetails.component.html" />
-    <Content Include="src\app\images\profile-pic-male.png" />
-    <Content Include="src\app\images\search.png" />
-    <Content Include="src\app\images\opc-ajax-loader.gif" />
+    <Content Include="src\assets\profile-pic-male.png" />
+    <Content Include="src\assets\search.png" />
+    <Content Include="src\assets\opc-ajax-loader.gif" />
     <Content Include="src\app\login\login.component.css" />
     <Content Include="src\app\login\login.component.html" />
     <Content Include="src\app\login\login.js" />
@@ -459,11 +463,13 @@
     <TypeScriptCompile Include="src\app\app.component.ts" />
     <TypeScriptCompile Include="src\app\app.module.ts" />
     <TypeScriptCompile Include="src\app\classes\product.ts" />
+    <TypeScriptCompile Include="src\app\classes\user.ts" />
     <TypeScriptCompile Include="src\app\footer.component.ts" />
     <TypeScriptCompile Include="src\app\header.component.ts" />
     <TypeScriptCompile Include="src\app\home\home.component.ts" />
     <TypeScriptCompile Include="src\app\login\login.component.ts" />
     <TypeScriptCompile Include="src\app\login\register.component.ts" />
+    <TypeScriptCompile Include="src\app\services\account.service.ts" />
     <TypeScriptCompile Include="src\app\services\authentication.service.ts" />
     <TypeScriptCompile Include="src\app\services\home.service.ts" />
     <TypeScriptCompile Include="src\app\services\image.service.ts" />
