--- a/TheWeb/package.json
+++ b/TheWeb/package.json
@@ -37,7 +37,9 @@
     "bootstrap": "4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ngx-image-gallery": "^1.3.1",
     "popper.js": "^1.14.1",
     "rxjs": "5.5.7",
     "systemjs": "0.19.40",
