--- a/TheWeb/TheWeb.csproj
+++ b/TheWeb/TheWeb.csproj
@@ -74,6 +74,12 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\drop-down-arrow-01-512.png" />
+    <Content Include="assets\loading-bars.svg" />
+    <Content Include="assets\opc-ajax-loader.gif" />
+    <Content Include="assets\profile-pic-male.png" />
+    <Content Include="assets\search.png" />
+    <Content Include="assets\zig-zag-blk.png" />
     <Content Include="bs-config.json" />
     <Content Include="node_modules\bootstrap\dist\css\bootstrap-grid.css" />
     <Content Include="node_modules\bootstrap\dist\css\bootstrap-grid.min.css" />
@@ -414,13 +420,34 @@
     <TypeScriptCompile Include="node_modules\popper.js\index.d.ts" />
     <TypeScriptCompile Include="src\app\account\acAddress.component.ts" />
     <TypeScriptCompile Include="src\app\account\acBasic.component.ts" />
+    <TypeScriptCompile Include="src\app\cart\address.component.ts" />
     <TypeScriptCompile Include="src\app\cart\cart.component.ts" />
+    <TypeScriptCompile Include="src\app\cart\checkout.component.ts" />
+    <TypeScriptCompile Include="src\app\cart\complete.component.ts" />
+    <TypeScriptCompile Include="src\app\cart\navbar.component.ts" />
+    <TypeScriptCompile Include="src\app\cart\payment.component.ts" />
+    <TypeScriptCompile Include="src\app\cart\review.component.ts" />
     <TypeScriptCompile Include="src\app\classes\image.ts" />
     <Content Include="src\app\account\acAddress.component.html" />
     <Content Include="src\app\account\acBasic.component.html" />
     <Content Include="src\app\account\account.component.css" />
     <Content Include="src\app\app.component.html" />
+    <Content Include="src\app\cart\address.component.html" />
+    <Content Include="src\app\cart\checkout.component.html" />
+    <Content Include="src\app\cart\complete.component.html" />
+    <Content Include="src\app\cart\form.css" />
+    <Content Include="src\app\cart\payment.component.html" />
+    <Content Include="src\app\cart\review.component.html" />
+    <Content Include="src\app\loading\loading-bars.css" />
+    <Content Include="src\app\cart\navbar.component.html" />
+    <Content Include="src\app\cart\nav-bar.css" />
+    <Content Include="src\app\cart\style.css" />
+    <Content Include="src\app\javascript\JavaScript.js" />
+    <Content Include="src\app\javascript\loading-bars.js" />
+    <Content Include="src\app\loading\loading.component.html" />
+    <Content Include="src\app\others\pincode.component.html" />
     <Content Include="src\assets\drop-down-arrow-01-512.png" />
+    <Content Include="src\assets\loading-bars.svg" />
     <Content Include="src\assets\zig-zag-blk.png" />
     <Content Include="src\app\cart\cart.component.css" />
     <Content Include="src\app\cart\cart.component.html" />
@@ -468,8 +495,10 @@
     <TypeScriptCompile Include="src\app\footer.component.ts" />
     <TypeScriptCompile Include="src\app\header.component.ts" />
     <TypeScriptCompile Include="src\app\home\home.component.ts" />
+    <TypeScriptCompile Include="src\app\loading\loading.component.ts" />
     <TypeScriptCompile Include="src\app\login\login.component.ts" />
     <TypeScriptCompile Include="src\app\login\register.component.ts" />
+    <TypeScriptCompile Include="src\app\others\pincode.component.ts" />
     <TypeScriptCompile Include="src\app\services\account.service.ts" />
     <TypeScriptCompile Include="src\app\services\authentication.service.ts" />
     <TypeScriptCompile Include="src\app\services\home.service.ts" />
@@ -487,7 +516,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="node_modules\popper.js\.tmp\" />
-    <Folder Include="src\app\javascript\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
