--- a/TheWeb/package.json
+++ b/TheWeb/package.json
@@ -36,6 +36,7 @@
     "@ng-bootstrap/ng-bootstrap": "~1.0.4",
     "angular-in-memory-web-api": "~0.3.0",
     "bootstrap": "4.0.0",
+    "bootstrap-confirmation2": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
